# forgealpha-club

./: .env.example  .gitignore  README.md  bot.py  config.py  database.py  docker-compose.yml  h --force-with-lease origin main  pyproject.toml  requirements.txt  scanner.py
.github/workflows/: ci.yml
app/: main.py
app/bot/: keyboards.py  messages.py
app/bot/routers/: admin.py  signals.py  start.py  subscribe.py
app/core/: config.py  constants.py  logging.py
app/db/: connection.py
app/db/migrations/: 001_init.sql
app/db/repositories/: payments.py  signals.py  users.py
app/jobs/: expire_subscriptions.py  payment_checker.py
app/scanners/: base.py  mock_scanner.py
app/services/: payments.py  signal_delivery.py  subscriptions.py
scripts/: init_db.py  run_mock_scanner.py
tests/: conftest.py  test_payments.py  test_scanner.py  test_signals.py  test_subscriptions.py
