[project]
name = "forgealpha-club"
version = "2.0.0"
description = "On-Chain Intelligence & Crypto Analytics Bot"
authors = [{ name = "feelmyskill99-dev" }]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiogram>=3.7.0",
    "python-dotenv>=1.0.1",
    "aiosqlite>=0.20.0",
    "pydantic>=2.8.2",
    "pydantic-settings>=2.3.4",
    "structlog>=24.4.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]